# prosody

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  RELEASING.md  build-bundle.sh  build-deb.sh  build.py  install.sh  prosody-gui  prosody-launcher  prosody.desktop  prosody.py  prosody.service  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  setup.sh  test-deb-install.sh  uninstall.sh
.github/workflows/: build-deb.yml  ci.yml  release.yml  test.yml
debian/: changelog  control  copyright  postinst  prosody-wrapper  rules
src/prosody/: __init__.py  __main__.py  audio.py  hotkey.py  main.py  transcription.py  ui_polished.py
tests/: __init__.py  run_tests.py  test_audio.py  test_config.py  test_hotkey.py  test_integration.py  test_main_entry.py  test_platform_specific.py  test_prosody.py  test_transcription.py  test_ui_polished.py
